tests/functional/lang/eval-fail-fromTOML-keyWithNullByte.err.exp
error:
       … while calling the 'fromTOML' builtin
         at /pwd/lang/eval-fail-fromTOML-keyWithNullByte.bsd:1:1:
            1| builtins.fromTOML ''"a\u0000b" = 1''
             | ^
            2|

       error: while parsing TOML: error: input string 'a␀b' cannot be represented as Bsd string because it contains null bytes
